cleaned userservice a bit, update in yaml file